Adding the check-release and support for non-Java actions